show password and login alignment fix

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -3,7 +3,7 @@
     height: auto;
 }
 #login-box{
-    height: 340px;
+    height: 440px;
     width: 500px;
     background-color: gainsboro;
     margin: auto;
